--- a/style_pack.7
+++ b/style_pack.7
@@ -1,10 +1,15 @@
 .TH YED-STYLE_PACK 7 "YED Plugin Manuals" "" "YED Plugin Manuals"
 .SH NAME
-style_pack \-
+style_pack \- A collection of most available styles in a single plugin.
 .SH CONFIGURATION
+None
 .SH COMMANDS
+None
+.SH BUFFERS
+None
 .SH NOTES
-.P
+None
 .SH VERSION
 0.0.1
 .SH KEYWORDS
+style, styles, color, colors, pack
